# nara-catalog-api

./: .gitignore  ARCHITECTURE-and-TESTING.md  BRD-agent-api-and-mcp.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  nara_api.py  pyproject.toml
.github/workflows/: ci.yml
docs/: nara-api-key-request-template.md
src/nara_catalog/: __init__.py  cli.py  client.py  compact.py  config.py  downloads.py  mcp_server.py  models.py  parse.py  preservation.py  service.py
tests/: conftest.py
tests/fixtures/nara/: record_passport_with_digital_objects.json  record_without_digital_objects.json  search_empty.json  search_variell_passport.json
tests/integration/: test_live_nara_api.py
tests/unit/: test_cli.py  test_config.py  test_downloads.py  test_mcp_contract.py  test_parse_compact.py  test_preservation.py  test_service.py
