[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nara-catalog-api"
version = "0.1.0"
description = "Agent-first read-only helper for the National Archives Catalog API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
test = ["pytest>=8.0"]

[project.scripts]
nara-api = "nara_catalog.cli:main"
nara-mcp = "nara_catalog.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live NARA API tests requiring RUN_NARA_INTEGRATION=1 and NARA_API_KEY",
]
