[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nara-catalog-api"
version = "0.1.0"
description = "Agent-first CLI, Python API, and MCP server for the National Archives Catalog API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Chris Hart"},
]
keywords = ["nara", "archives", "cli", "mcp", "research", "genealogy", "history"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27,<2"]
test = ["pytest>=8.0"]

[project.scripts]
nara-api = "nara_catalog.cli:main"
nara-mcp = "nara_catalog.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live NARA API tests requiring RUN_NARA_INTEGRATION=1 and NARA_API_KEY",
]
